--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
     "express": "^4.21.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
+    "json-parse-better-errors": "^1.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
